Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18569

Qbs: Crash in qbs::Internal::JsCommandExecutorThreadObject::cancel

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.4.0-rc1
    • Qt Creator 4.4.0-beta1
    • None
    • Qt Creator from 4.4 branch, on 8309e0c56a234f7ab1c2d658fcd680b801a5e2f4
    • 20825b73d125c689a13a154266d2bbda0aab2a15 (qbs)

      • I do not remember what I've done.
      • Not sure how accurate the stack trace is since Qt Creator was build in release mode with debug information.
      • Full stack trace for all threads in attachment.
      (gdb) bt
      #0 0x00007f0225160cee in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Script.so.5
      #1 0x00007f0225160296 in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Script.so.5
      #2 0x00007f02251bf065 in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Script.so.5
      #3 0x00007f0225188bfc in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Script.so.5
      #4 0x00007f022514319c in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Script.so.5
      #5 0x00007f02251527e5 in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Script.so.5
      #6 0x00007f0225202972 in QScriptEngine::abortEvaluation(QScriptValue const&) ()
      from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Script.so.5
      #7 0x00007f02257c67c7 in qbs::Internal::JsCommandExecutorThreadObject::cancel (this=0x7f017c1fe840)
      at buildgraph/jscommandexecutor.cpp:87
      #8 qbs::Internal::JsCommandExecutor::<lambda()>::operator() (__closure=<optimized out>)
      at buildgraph/jscommandexecutor.cpp:228
      #9 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, qbs::Internal::JsCommandExecutor::cancel()::<lambda()> >::call (arg=<optimized out>, f=...)
      at /home/nik/opt/qt-5.9.0/5.9/gcc_64/include/QtCore/qobjectdefs_impl.h:130
      #10 QtPrivate::Functor<qbs::Internal::JsCommandExecutor::cancel()::<lambda()>, 0>::call<QtPrivate::List<>, void> (
      arg=<optimized out>, f=...) at /home/nik/opt/qt-5.9.0/5.9/gcc_64/include/QtCore/qobjectdefs_impl.h:242
      #11 QtPrivate::QFunctorSlotObject<qbs::Internal::JsCommandExecutor::cancel()::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=<optimized out>, 
      r=<optimized out>, a=<optimized out>, ret=<optimized out>)
      at /home/nik/opt/qt-5.9.0/5.9/gcc_64/include/QtCore/qobject_impl.h:168
      #12 0x00007f024ce984d6 in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #13 0x00007f024ce8ce9b in QObject::event(QEvent*) () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #14 0x00007f024e1c04bc in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
      from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Widgets.so.5
      #15 0x00007f024e1c78e7 in QApplication::notify(QObject*, QEvent*) ()
      from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Widgets.so.5
      #16 0x00007f024ce61e78 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
      from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #17 0x00007f024ceb26be in QTimerInfoList::activateTimers() ()
      from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #18 0x00007f024ceb2e81 in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #19 0x00007f02487dda17 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #20 0x00007f02487ddc80 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #21 0x00007f02487ddd2c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #22 0x00007f024ceb393f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
      from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #23 0x00007f024ce605ea in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
      from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #24 0x00007f024cc94d0c in QThread::exec() () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #25 0x00007f024cc994ba in ?? () from /home/nik/opt/qt-5.9.0/5.9/gcc_64/lib/libQt5Core.so.5
      #26 0x00007f024c736494 in start_thread (arg=0x7f01552ff700) at pthread_create.c:333
      #27 0x00007f024bbdba8f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:97
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes