JsCommandExecutor: Try harder not to cancel non-running commands

It is not entirely clear that this fixes the linked crash (which is not
reproducible), but it eliminates the only potentially questionable code
path, which is calling abortEvaluation() on the script engine after its
thread has finished.

Task-number: QTCREATORBUG-18569
Change-Id: I22296644505397a17f7b81dd534ed122f2477a11
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>